# morfometria

./: README.md  image_aligner.py  inserisci_landmarks.py  layer_manager.py  plugin_allinea_spezzata.py.old  plugin_calibrazione.py  plugin_gestione_layers.py  plugin_spezzata_curva.py  pyproject.toml  rileva_landmarks_vs12.py  rileva_landmarks_vs12_2025-05-02.py  save_data.py  settings_landmarks.py
src/: start.py
src/geomorfometria/: main.py  plugin_arti.py  rileva_landmarks_vs12.py
