[project]
name = "geomorfometria"
version = "0.0.1"
description = "Geomorfometria"
authors = [{ name="Sergio Castellano", email="sergio.castellano@unito.it" }, { name="Olivier Friard", email="olivier.friard@unito.it" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pyside6>=6.9.0",
]
